Adding HTTPS capability to the http service

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -163,7 +163,12 @@ outputs:
 services:
   - name: defaultService
     type: http
-    listen: ":80"
+    http:
+      listen: ":80"
+    https:
+      listen: ":443"
+      certificatePath: "./foo.cert"
+      privateKeyPath: "./foo.key"
     errorsType: application/json
     routes:
       - path: "/dummies"
