--- a/examples/japanese-dictionary/config.yaml
+++ b/examples/japanese-dictionary/config.yaml
@@ -41,7 +41,8 @@ outputs:
 services:
   - name: service
     type: http
-    listen: ":80"
+    http:
+      listen: ":80"
     errorsType: application/json
     routes:
       - path: "/"
