--- a/examples/japanese-dictionary/config.yaml
+++ b/examples/japanese-dictionary/config.yaml
@@ -15,7 +15,7 @@ inputs:
         xpath: "string(//gloss[not(@xml:lang)][1])"
 indexes:
   - name: index
-    type: memoryMap
+    type: map
     input: dictionary
     properties:
       - writing
