--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -100,6 +100,7 @@ indexes:
       - name
   - name: defaultIndexPartial
     type: partial
+    path: ./partialIndex.rodb
     input: defaultInput
     ignoreCase: true
     properties:
