--- a/examples/japanese-dictionary/config.yaml
+++ b/examples/japanese-dictionary/config.yaml
@@ -22,6 +22,7 @@ indexes:
       - reading
   - name: indexSearch
     type: partial
+    path: ./indexSearch.rodb
     input: dictionary
     properties:
       - translation
