Adding a persistent docker volume for the example's indexes

--- a/examples/japanese-dictionary/config.yaml
+++ b/examples/japanese-dictionary/config.yaml
@@ -22,7 +22,7 @@ indexes:
       - reading
   - name: indexSearch
     type: partial
-    path: ./indexSearch.rodb
+    path: /index/indexSearch.rodb
     input: dictionary
     properties:
       - translation
