--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
     ports:
       - "3001:80"
       - "3002:443"
+    volumes:
+      - generatedIndexes:/index
   zip-codes-tokyo:
     tty: true
     build:
@@ -22,3 +24,5 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - "3000:80"
+volumes:
+  generatedIndexes:
