--- a/examples/zip-codes-tokyo/config.yaml
+++ b/examples/zip-codes-tokyo/config.yaml
@@ -12,7 +12,7 @@ parsers:
 inputs:
   - name: zipCodesTokyo
     type: csv
-    path: ./zip-codes.csv
+    path: /var/zip-codes.csv
     dieOnInputChange: true
     ignoreFirstRow: false
     delimiter: ","
@@ -49,7 +49,7 @@ inputs:
         parser: integer
   - name: updatedValues
     type: csv
-    path: ./updated-values.csv
+    path: /var/updated-values.csv
     dieOnInputChange: true
     ignoreFirstRow: false
     delimiter: ","
@@ -60,7 +60,7 @@ inputs:
         parser: string
   - name: reasonsForUpdate
     type: csv
-    path: ./reasons-for-updated.csv
+    path: /var/reasons-for-updated.csv
     dieOnInputChange: true
     ignoreFirstRow: false
     delimiter: ","
