Basic (non-tested) code for the sqlite index

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -105,6 +105,13 @@ indexes:
     ignoreCase: true
     properties:
       - name
+  - name: defaultIndexSqlite
+    type: sqlite
+    dsn: ./sqlite.rodb
+    input: defaultInput
+    properties:
+      - id
+      - name
 outputs:
   - name: defaultGraphqlOutput
     type: graphql
