--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -114,6 +114,15 @@ indexes:
         collate: binary
       - name: name
         collate: nocase
+  - name: defaultIndexFts5
+    type: fts5
+    dsn: ./fts5.rodb
+    input: defaultInput
+    prefix: [2, 3] # https://www.sqlite.org/fts5.html#prefix_indexes
+    tokenize: "unicode61 remove_diacritics 0 tokenchars '-_'" # https://www.sqlite.org/fts5.html#tokenizers
+    properties:
+      - id
+      - name
 outputs:
   - name: defaultGraphqlOutput
     type: graphql
