--- a/examples/people/docker-compose.yaml
+++ b/examples/people/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   people:
     tty: true
     build:
-      context: "${EX_PE_CONTEXT:-.}"
+      context: .
       dockerfile: ./Dockerfile
     user: root:root
     ports:
