Adding menus and the most basic page structure

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-cayman
 title: RODB
 description: Read-Only DataBase
+menu:
+  - title: Documentation
+    href: /documentation/
+  - title: Changelog
+    href: /changelog/
