--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,9 +1,9 @@
 name: Build and push docker image
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 jobs:
-  tests:
+  build:
     name: Build and push docker image
     runs-on: ubuntu-latest
     steps:
