Changing the structure of the schema directories

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -95,7 +95,7 @@ services:
       context: .
       dockerfile: ./build/docker/schema-doc/Dockerfile
     volumes:
-      - $PWD:/rodb
+      - $PWD/docs/schema:/schema
 volumes:
   japaneseDictionaryIndexes:
   peopleIndexes:
